# simple-keepass-viewer

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  handler.rs  main.rs  store.rs
templates/: entries.html.hbs  error.html.hbs  files.html.hbs  main.html.hbs
templates/css/: app.css
