[package]
name = "simple-keepass-viewer"
version = "0.1.0"
authors = ["Matthias Schorsch"]

[dependencies]
clap = "2.24.2"
error-chain = "0.10.0"
keepass = "0.1.2"
router = "0.5.1"
handlebars-iron = "0.24.1"
urlencoded = "0.5.0"
serde = "1.0.7"
serde_derive = "1.0.7"
serde_json = "1.0.2"
lazy_static = "0.2.8"
hyper-native-tls = "0.2"
log = "0.3.7"
log4rs = "0.7.0"

[dependencies.iron]
version = "0.5.1"
features = ["hyper-native-tls"]

[replace]
# Bug-Fix for `mlock` and `munlock` is private (Windows only)
"secstr:0.2.1" = { git = 'https://github.com/myfreeweb/secstr', rev = "be7fa2a14a0d23539f9d73a576755c1cc47ec2bb" }